--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+python==3.9.19
 line-bot-sdk==2.3.0
 flask==2.1.2
 requests==2.28.0
 Werkzeug==2.2.2
 gunicorn==22.0.0
 langchain==0.1.16
+opencc==1.1.7
